#1 - add Admin and User

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,1 +1,27 @@
-spring.application.name=SSPS
+spring.application.name=ssps
+server.port=8386
+spring.config.import=optional:secrets.properties
+
+
+#spring.datasource.url=YOUR_DATABASE_SERVER_URL
+#spring.datasource.username=YOUR_USERNAME
+#spring.datasource.password=YOUR_PASSWORD
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=
+spring.jpa.show-sql=true
+
+# Email sender
+spring.mail.host=smtp.gmail.com
+spring.mail.port=465
+#spring.mail.username=YOUR_EMAIL
+#spring.mail.password=YOUR_PASSWORD
+spring.mail.properties.mail.stmp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.enable=true
+
+
+# Google Login
+#spring.security.oauth2.client.registration.google.client-id=YOUR_CLIENT-ID
+#spring.security.oauth2.client.registration.google.client-secret=YOUR_CLIENT-SECRET
+
+logging.level.org.springframework.security=TRACE
