--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -131,10 +131,10 @@
 			<version>3.1.1</version>
 		</dependency>
 
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-oauth2-client</artifactId>
-		</dependency>
+		</dependency> -->
 
 
 	</dependencies>
