--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -2,6 +2,11 @@ spring.application.name=ssps
 server.port=8386
 spring.config.import=optional:secrets.properties
 
+
+
+#config rest api
+api.prefix=api/v1
+
 #config for database
 spring.datasource.url=jdbc:mysql://localhost:3306/ssps?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
@@ -18,18 +23,20 @@ project.jwt.base64-secret=C68YP4EseWGHtmF6QLooEM6EeiYSP3rcLvvQX4b4HriD2RkB4FbPpv
 project.jwt.access-token-validity-in-seconds=86400
 project.jwt.refresh-token-validity-in-seconds=86400
 
-# Email senders
-spring.mail.host=smtp.gmail.com
-spring.mail.port=465
-#spring.mail.username=YOUR_EMAIL
-#spring.mail.password=YOUR_PASSWORD
-spring.mail.properties.mail.stmp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.ssl.enable=true
+
+
+
+# # Email senders
+# spring.mail.host=smtp.gmail.com
+# spring.mail.port=465
+# #spring.mail.username=YOUR_EMAIL
+# #spring.mail.password=YOUR_PASSWORD
+# spring.mail.properties.mail.stmp.auth=true
+# spring.mail.properties.mail.smtp.starttls.enable=true
+# spring.mail.properties.mail.smtp.ssl.enable=true
 
 
 # Google Login
 #spring.security.oauth2.client.registration.google.client-id=YOUR_CLIENT-ID
 #spring.security.oauth2.client.registration.google.client-secret=YOUR_CLIENT-SECRET
 
-logging.level.org.springframework.security=TRACE
