--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=ssps
 server.port=8386
-spring.config.import=optional:secrets.properties
+#spring.config.import=optional:secrets.properties
 
 
 
