--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -18,9 +18,9 @@ api.prefix=api/v1
 
 
 #config for database aiven.io
-spring.datasource.url=jdbc:mysql://avnadmin:AVNS_8fb3u8RsilKcuwgDdQn@mysql-ssps-ssps-hcmut.e.aivencloud.com:15504/db_spss?ssl-mode=REQUIRED
+spring.datasource.url=
 spring.datasource.username=avnadmin
-spring.datasource.password=AVNS_8fb3u8RsilKcuwgDdQn
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.maximum-pool-size=10
 spring.jpa.show-sql=true
