--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.config.import=optional:secrets.properties
 api.prefix=api/v1
 
 #config for database
-# spring.datasource.url=jdbc:mysql://localhost:3306/ssps?useSSL=false&serverTimezone=UTC
+# spring.datasource.url=jdbc:mysql://localhost:3306/db_ssps?useSSL=false&serverTimezone=UTC
 # spring.datasource.username=root
 # spring.datasource.password=123456
 # spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -17,7 +17,7 @@ api.prefix=api/v1
 
 
 
-#config for database aiven.io
+##config for database aiven.io
 spring.datasource.url=jdbc:mysql://avnadmin:AVNS_8fb3u8RsilKcuwgDdQn@mysql-ssps-ssps-hcmut.e.aivencloud.com:15504/db_ssps?ssl-mode=REQUIRED
 spring.datasource.username=avnadmin
 spring.datasource.password=AVNS_8fb3u8RsilKcuwgDdQn
