--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -8,28 +8,22 @@ spring.config.import=optional:secrets.properties
 api.prefix=api/v1
 
 #config for database
-<<<<<<< HEAD
-spring.datasource.url=jdbc:mysql://localhost:3306/ssps?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/spss_test?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=123456
-=======
-# spring.datasource.url=jdbc:mysql://localhost:3306/db_ssps?useSSL=false&serverTimezone=UTC
-# spring.datasource.username=root
-# spring.datasource.password=123456
-# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-# spring.jpa.hibernate.ddl-auto=update
-# spring.jpa.show-sql=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 
 
 ##config for database aiven.io
-spring.datasource.url=jdbc:mysql://avnadmin:AVNS_8fb3u8RsilKcuwgDdQn@mysql-ssps-ssps-hcmut.e.aivencloud.com:15504/db_ssps?ssl-mode=REQUIRED
-spring.datasource.username=avnadmin
-spring.datasource.password=AVNS_8fb3u8RsilKcuwgDdQn
->>>>>>> 0b1e11686d666e4b7714ab5e687afa368c7700d6
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+# spring.datasource.url=jdbc:mysql://avnadmin:AVNS_8fb3u8RsilKcuwgDdQn@mysql-ssps-ssps-hcmut.e.aivencloud.com:15504/db_ssps?ssl-mode=REQUIRED
+# spring.datasource.username=avnadmin
+# spring.datasource.password=AVNS_8fb3u8RsilKcuwgDdQn
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.show-sql=true
 
 
 
