--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.config.import=optional:secrets.properties
 
 
 #config rest api
-api.prefix=api
+api.prefix=api/v1
 
 #config for database
 # spring.datasource.url=jdbc:mysql://localhost:3306/ssps?useSSL=false&serverTimezone=UTC
