--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -53,3 +53,11 @@ spring.web.resources.add-mappings=false
 #spring.security.oauth2.client.registration.google.client-id=YOUR_CLIENT-ID
 #spring.security.oauth2.client.registration.google.client-secret=YOUR_CLIENT-SECRET
 
+#payment
+payment.vnPay.url=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+payment.vnPay.tmnCode=64XG7W0J
+payment.vnPay.secretKey=IB6HK10UIY6ZWHENL6F8CQZTXPWRZT4X
+payment.vnPay.returnUrl=http://localhost:9090/api/v1/payment/vn-pay-callback
+payment.vnPay.version=2.1.0
+payment.vnPay.command=pay
+payment.vnPay.orderType=other
