--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -18,11 +18,11 @@ api.prefix=api/v1
 
 
 # #config for database aiven.io
-spring.datasource.url=jdbc:mysql://localhost:3306/hcmut_ssps?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://avnadmin:AVNS_8fb3u8RsilKcuwgDdQn@mysql-ssps-ssps-hcmut.e.aivencloud.com:15504/db_ssps?ssl-mode=REQUIRED
+spring.datasource.username=avnadmin
+spring.datasource.password=AVNS_8fb3u8RsilKcuwgDdQn
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=
+spring.datasource.hikari.maximum-pool-size=10
 spring.jpa.show-sql=true
 
 # Hibernate properties
