fix logic purchase pages

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/hcmut_ssps?useSSL=false&server
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=
 spring.jpa.show-sql=true
 
 
@@ -57,7 +57,7 @@ spring.web.resources.add-mappings=false
 payment.vnPay.url=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
 payment.vnPay.tmnCode=64XG7W0J
 payment.vnPay.secretKey=IB6HK10UIY6ZWHENL6F8CQZTXPWRZT4X
-payment.vnPay.returnUrl=http://localhost:9090/api/v1/payment/vn-pay-callback
+payment.vnPay.returnUrl=http://localhost:8386/api/v1/payment/vn-pay-callback
 payment.vnPay.version=2.1.0
 payment.vnPay.command=pay
 payment.vnPay.orderType=other
