--- a/Frontend/vercel.json
+++ b/Frontend/vercel.json
@@ -1,10 +1,12 @@
 {
-    "builds": [
-      { "src": "vite.config.js", "use": "@vercel/static-build", "config": {} }
-    ],
-    "routes": [
-      { "src": "/(.*)", "dest": "/index.html" }
-    ],
-    "outputDirectory": "dist"
-  }
-  
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build"
+    }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "/index.html" }
+  ],
+  "outputDirectory": "dist"
+}
